--- a/DeciderApp/Base.lproj/Main.storyboard
+++ b/DeciderApp/Base.lproj/Main.storyboard
@@ -539,62 +539,69 @@
                                     <constraint firstAttribute="width" constant="240" id="bLJ-Jp-tEE"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6kP-6A-wpb">
-                                <rect key="frame" x="268" y="198" width="63" height="20.5"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title of Event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NXD-Az-nye">
-                                <rect key="frame" x="250" y="238" width="100.5" height="20.5"/>
+                                <rect key="frame" x="249" y="264" width="100.5" height="20.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ais-f7-0RU">
-                                <rect key="frame" x="256.5" y="279" width="88" height="20.5"/>
+                                <rect key="frame" x="256" y="333" width="88" height="20.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vde-12-zTW">
-                                <rect key="frame" x="297" y="505" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vde-12-zTW">
+                                <rect key="frame" x="277" y="505" width="46" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="dismissButton:" destination="MHg-fg-ZY3" eventType="touchUpInside" id="Fqo-sY-ZPH"/>
+                                </connections>
                             </button>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="6vn-bq-aJB">
-                                <rect key="frame" x="116" y="330" width="378" height="112"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kHd-sn-BJb">
+                                <rect key="frame" x="281" y="401" width="36" height="20.5"/>
                                 <animations/>
-                                <date key="date" timeIntervalSinceReferenceDate="469667896.34248602">
-                                    <!--2015-11-19 23:18:16 +0000-->
-                                </date>
-                            </datePicker>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6kP-6A-wpb">
+                                <rect key="frame" x="268" y="214" width="63" height="20.5"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="NXD-Az-nye" firstAttribute="centerX" secondItem="6kP-6A-wpb" secondAttribute="centerX" id="2bI-3R-J0d"/>
+                            <constraint firstItem="vde-12-zTW" firstAttribute="top" secondItem="kHd-sn-BJb" secondAttribute="bottom" constant="83.5" id="49Q-91-QAq"/>
                             <constraint firstItem="NXD-Az-nye" firstAttribute="top" secondItem="6kP-6A-wpb" secondAttribute="bottom" constant="8" id="7CO-HN-ZBr"/>
                             <constraint firstItem="rkc-3B-5Bo" firstAttribute="top" secondItem="tGW-rb-NSj" secondAttribute="bottom" constant="410" id="7Or-Ch-6XO"/>
                             <constraint firstItem="6kP-6A-wpb" firstAttribute="centerX" secondItem="tGW-rb-NSj" secondAttribute="centerX" id="BmN-Pq-A8P"/>
-                            <constraint firstItem="6kP-6A-wpb" firstAttribute="top" secondItem="tGW-rb-NSj" secondAttribute="bottom" constant="8" id="IGT-ka-0kQ"/>
+                            <constraint firstItem="kHd-sn-BJb" firstAttribute="centerX" secondItem="ais-f7-0RU" secondAttribute="centerX" constant="-1" id="GOu-YN-Tul"/>
+                            <constraint firstItem="6kP-6A-wpb" firstAttribute="top" secondItem="tGW-rb-NSj" secondAttribute="bottom" constant="24" id="IGT-ka-0kQ"/>
                             <constraint firstItem="tGW-rb-NSj" firstAttribute="centerX" secondItem="JY9-xu-l0G" secondAttribute="centerX" id="PGE-ep-NxP"/>
-                            <constraint firstItem="ais-f7-0RU" firstAttribute="centerX" secondItem="NXD-Az-nye" secondAttribute="centerX" id="SV1-rm-KAz"/>
+                            <constraint firstItem="ais-f7-0RU" firstAttribute="centerX" secondItem="NXD-Az-nye" secondAttribute="centerX" constant="0.75" id="SV1-rm-KAz"/>
                             <constraint firstItem="tGW-rb-NSj" firstAttribute="top" secondItem="JY9-xu-l0G" secondAttribute="bottom" constant="8" id="VhQ-bq-56d"/>
-                            <constraint firstItem="NXD-Az-nye" firstAttribute="top" secondItem="6kP-6A-wpb" secondAttribute="bottom" constant="20" id="YEp-Vc-hkM"/>
+                            <constraint firstItem="NXD-Az-nye" firstAttribute="top" secondItem="6kP-6A-wpb" secondAttribute="bottom" constant="29.5" id="YEp-Vc-hkM"/>
                             <constraint firstItem="JY9-xu-l0G" firstAttribute="top" secondItem="Yny-y4-G08" secondAttribute="bottom" constant="8" id="Z4M-JH-iiQ"/>
                             <constraint firstItem="JY9-xu-l0G" firstAttribute="top" secondItem="Yny-y4-G08" secondAttribute="bottom" constant="42" id="cO6-Hk-Oca"/>
                             <constraint firstItem="JY9-xu-l0G" firstAttribute="top" secondItem="Yny-y4-G08" secondAttribute="bottom" constant="42" id="fDN-gP-6DM"/>
-                            <constraint firstItem="NXD-Az-nye" firstAttribute="top" secondItem="6kP-6A-wpb" secondAttribute="bottom" constant="20" id="gf3-kR-kNi"/>
-                            <constraint firstItem="ais-f7-0RU" firstAttribute="centerX" secondItem="NXD-Az-nye" secondAttribute="centerX" id="hSh-2n-HZU"/>
-                            <constraint firstItem="ais-f7-0RU" firstAttribute="top" secondItem="NXD-Az-nye" secondAttribute="bottom" constant="20" id="hvo-8O-O8U"/>
-                            <constraint firstItem="6kP-6A-wpb" firstAttribute="top" secondItem="tGW-rb-NSj" secondAttribute="bottom" constant="8" id="pel-lQ-nQJ"/>
+                            <constraint firstItem="NXD-Az-nye" firstAttribute="top" secondItem="6kP-6A-wpb" secondAttribute="bottom" constant="29.5" id="gf3-kR-kNi"/>
+                            <constraint firstItem="ais-f7-0RU" firstAttribute="centerX" secondItem="NXD-Az-nye" secondAttribute="centerX" constant="0.75" id="hSh-2n-HZU"/>
+                            <constraint firstItem="ais-f7-0RU" firstAttribute="top" secondItem="NXD-Az-nye" secondAttribute="bottom" constant="48.5" id="hvo-8O-O8U"/>
+                            <constraint firstItem="vde-12-zTW" firstAttribute="centerX" secondItem="kHd-sn-BJb" secondAttribute="centerX" constant="1" id="k9i-hc-3Vz"/>
+                            <constraint firstItem="kHd-sn-BJb" firstAttribute="top" secondItem="ais-f7-0RU" secondAttribute="bottom" constant="47.5" id="lKJ-pD-bQV"/>
+                            <constraint firstItem="6kP-6A-wpb" firstAttribute="top" secondItem="tGW-rb-NSj" secondAttribute="bottom" constant="24" id="pel-lQ-nQJ"/>
                             <constraint firstItem="NXD-Az-nye" firstAttribute="top" secondItem="6kP-6A-wpb" secondAttribute="bottom" constant="8" id="ssX-6m-VWa"/>
                             <constraint firstItem="JY9-xu-l0G" firstAttribute="centerX" secondItem="9tl-Xg-Bma" secondAttribute="centerX" id="vmv-Iv-bCg"/>
-                            <constraint firstItem="NXD-Az-nye" firstAttribute="top" secondItem="6kP-6A-wpb" secondAttribute="bottom" constant="20" id="z2d-Nu-gOJ"/>
+                            <constraint firstItem="NXD-Az-nye" firstAttribute="top" secondItem="6kP-6A-wpb" secondAttribute="bottom" constant="29.5" id="z2d-Nu-gOJ"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -605,6 +612,14 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="eventAddressLabel" destination="6kP-6A-wpb" id="C79-Q9-in7"/>
+                        <outlet property="eventDateLabel" destination="kHd-sn-BJb" id="lJs-7C-UXP"/>
+                        <outlet property="eventDescriptionLabel" destination="ais-f7-0RU" id="0bR-fG-XQi"/>
+                        <outlet property="eventImageLabel" destination="tGW-rb-NSj" id="XdD-vw-fCo"/>
+                        <outlet property="eventNameLabel" destination="JY9-xu-l0G" id="veB-xk-8i2"/>
+                        <outlet property="eventTitleLabel" destination="NXD-Az-nye" id="YGr-Wn-FSS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Uz-q5-hcU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
